first stage experience

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/b3bb6c61f0.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
@@ -12,7 +15,106 @@
   <body>
     <div class="container">
       <aside></aside>
-      <main></main>
+      <main>
+        <section class="personal-info">
+          <h1 class="name">John Smith</h1>
+          <p class="career">IT Project Manager</p>
+
+          <div class="socials">
+            <div class="social">
+              <span class="icon__container icon__container--social">
+                <i class="fa-solid fa-phone icon icon--social"></i>
+              </span>
+
+              <span class="social__detail">774-987-4009</span>
+            </div>
+            <div class="social">
+              <span class="icon__container icon__container--social">
+                <i class="fa-solid fa-envelope icon icon--social"></i>
+              </span>
+
+              <span class="social__detail">j.smith@upwork.com</span>
+            </div>
+            <div class="social">
+              <span class="icon__container icon__container--social">
+                <i class="fa-brands fa-linkedin-in icon icon--social"></i>
+              </span>
+
+              <span class="social__detail">linkedin.com/johnutw</span>
+            </div>
+            <div class="social">
+              <span class="icon__container icon__container--social">
+                <i class="fa-brands fa-twitter icon icon--social"></i>
+              </span>
+
+              <span class="social__detail">@johnmithutw</span>
+            </div>
+          </div>
+
+          <p class="personal-description">
+            IT Professional with over <strong>10 years</strong> of experience
+            specializing in <strong>IT department management</strong> for
+            international logistics companies. I can implement effective
+            <strong> IT strategies </strong> at local and global levels. My
+            greatest strength is business awareness, which enables me to
+            permanently streamline infrastructure and applications.
+          </p>
+        </section>
+        <section class="experience">
+          <header class="section__header">
+            <span class="icon__container icon__container--normal">
+              <i class="fa-solid fa-briefcase icon icon--normal"></i>
+            </span>
+
+            <h2 class="section__heading">Experience</h2>
+          </header>
+          <ul class="experience__list">
+            <li class="experience__item">
+              <h3 class="job-title">Senior Project Manager</h3>
+              <span class="company">Seton Hospital, ME</span>
+              <ul class="job-responsibility">
+                <li>
+                  Oversaw all major hospital IT projects for 10+ years, focus on
+                  cost reduction.
+                </li>
+                <li>
+                  Responsible for creating, improving, and developing IT project
+                  strategies.
+                </li>
+                <li>
+                  Implemented the highly successful Lean Training and Six Sigma
+                  projects for all employees.
+                </li>
+                <li>
+                  Reduced the costs of IT infrastructure maintenance by 5%.
+                </li>
+              </ul>
+            </li>
+
+            <li class="experience__item">
+              <h3 class="job-title">Senior Project Manager</h3>
+              <span class="company">Seton Hospital, ME</span>
+              <ul class="job-responsibility">
+                <li>
+                  Oversaw all major hospital IT projects for 10+ years, focus on
+                  cost reduction.
+                </li>
+                <li>
+                  Responsible for creating, improving, and developing IT project
+                  strategies.
+                </li>
+                <li>
+                  Implemented the highly successful Lean Training and Six Sigma
+                  projects for all employees.
+                </li>
+                <li>
+                  Reduced the costs of IT infrastructure maintenance by 5%.
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+      </main>
     </div>
   </body>
 </html>
