--- a/index.html
+++ b/index.html
@@ -13,44 +13,47 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <aside></aside>
-      <main>
+    <main>
+      <div class="section--info">
+        <aside class="navbar"></aside>
         <section class="personal-info">
           <h1 class="name">John Smith</h1>
           <p class="career">IT Project Manager</p>
-
           <div class="socials">
             <div class="social">
               <span class="icon__container icon__container--social">
                 <i class="fa-solid fa-phone icon icon--social"></i>
               </span>
+              <a href="tel:774-987-4009"
+                ><span class="social__detail">774-987-4009</span></a
+              >
+            </div>
 
-              <span class="social__detail">774-987-4009</span>
+            <div class="social">
+              <span class="icon__container icon__container--social">
+                <i class="fa-brands fa-linkedin-in icon icon--social"></i>
+              </span>
+              <a href="http://linkedin.com/johnutw"
+                ><span class="social__detail">linkedin.com/johnutw</span></a
+              >
             </div>
             <div class="social">
               <span class="icon__container icon__container--social">
                 <i class="fa-solid fa-envelope icon icon--social"></i>
               </span>
-
-              <span class="social__detail">j.smith@upwork.com</span>
-            </div>
-            <div class="social">
-              <span class="icon__container icon__container--social">
-                <i class="fa-brands fa-linkedin-in icon icon--social"></i>
-              </span>
-
-              <span class="social__detail">linkedin.com/johnutw</span>
+              <a href="mailto:j.smith@upwork.com"
+                ><span class="social__detail">j.smith@upwork.com</span></a
+              >
             </div>
             <div class="social">
               <span class="icon__container icon__container--social">
                 <i class="fa-brands fa-twitter icon icon--social"></i>
               </span>
-
-              <span class="social__detail">@johnmithutw</span>
+              <a href="http://https://twitter.com/johnmithutw"
+                ><span class="social__detail">@johnmithutw</span></a
+              >
             </div>
           </div>
-
           <p class="personal-description">
             IT Professional with over <strong>10 years</strong> of experience
             specializing in <strong>IT department management</strong> for
@@ -60,61 +63,286 @@
             permanently streamline infrastructure and applications.
           </p>
         </section>
-        <section class="experience">
-          <header class="section__header">
-            <span class="icon__container icon__container--normal">
-              <i class="fa-solid fa-briefcase icon icon--normal"></i>
-            </span>
+      </div>
 
-            <h2 class="section__heading">Experience</h2>
-          </header>
-          <ul class="experience__list">
-            <li class="experience__item">
-              <h3 class="job-title">Senior Project Manager</h3>
-              <span class="company">Seton Hospital, ME</span>
-              <ul class="job-responsibility">
-                <li>
-                  Oversaw all major hospital IT projects for 10+ years, focus on
-                  cost reduction.
-                </li>
-                <li>
-                  Responsible for creating, improving, and developing IT project
-                  strategies.
-                </li>
-                <li>
-                  Implemented the highly successful Lean Training and Six Sigma
-                  projects for all employees.
-                </li>
-                <li>
-                  Reduced the costs of IT infrastructure maintenance by 5%.
-                </li>
-              </ul>
+      <section class="timeline">
+        <!---------------------- Experience Section ------------------------->
+
+        <span class="timeline__date"></span>
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--normal timeline__icon timeline__icon--header"
+          >
+            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+        <h2 class="timeline__heading">Experience</h2>
+        <span class="timeline__date">2006-12 - present</span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail">
+          <h3 class="job-title">Senior Project Manager</h3>
+          <span class="company">Seton Hospital, ME</span>
+          <ul class="job-responsibility">
+            <li>
+              Oversaw all major hospital IT projects for 10+ years, focus on
+              cost reduction.
             </li>
+            <li>
+              Responsible for creating, improving, and developing IT project
+              strategies.
+            </li>
+            <li>
+              Implemented the highly successful Lean Training and Six Sigma
+              projects for all employees.
+            </li>
+            <li>Reduced the costs of IT infrastructure maintenance by 5%.</li>
+          </ul>
+        </div>
 
-            <li class="experience__item">
-              <h3 class="job-title">Senior Project Manager</h3>
-              <span class="company">Seton Hospital, ME</span>
-              <ul class="job-responsibility">
-                <li>
-                  Oversaw all major hospital IT projects for 10+ years, focus on
-                  cost reduction.
-                </li>
-                <li>
-                  Responsible for creating, improving, and developing IT project
-                  strategies.
-                </li>
-                <li>
-                  Implemented the highly successful Lean Training and Six Sigma
-                  projects for all employees.
-                </li>
-                <li>
-                  Reduced the costs of IT infrastructure maintenance by 5%.
-                </li>
-              </ul>
+        <span class="timeline__date">2006-12 - present</span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail">
+          <h3 class="job-title">Junior Project Manager</h3>
+          <span class="company">Seton Hospital, ME</span>
+          <ul class="job-responsibility">
+            <li>
+              Streamlined IT logistics and administration operation cutting
+              costs by 25%.
+            </li>
+            <li>
+              Diagnosed problems with hardware and operating systems and
+              implemented new solutions.
+            </li>
+            <li>Maintained the user database of over 30000 patients.</li>
+            <li>
+              Managed project for lean training for all IT Support Officers.
             </li>
           </ul>
-        </section>
-      </main>
-    </div>
+        </div>
+
+        <!------------- Education Section ------------------->
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--normal timeline__icon timeline__icon--header"
+          >
+            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+          </span>
+
+          <span class="timeline__line"></span>
+        </div>
+
+        <h2 class="timeline__heading">Education</h2>
+
+        <span class="timeline__date">2006-12 - present</span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail">
+          <h3 class="job-title">
+            BS/MS in Computer Science, University of Maryland
+          </h3>
+          <ul class="job-responsibility">
+            <li>Graduated Summa Cum Laude.</li>
+            <li>Member of Student Association of Computer Science.</li>
+            <li>
+              Managed a student project to organize a conference for 50+
+              professionals.
+            </li>
+          </ul>
+        </div>
+
+        <!---------------- Skills Section -------------------->
+
+        <span class="timeline__date"></span>
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--normal timeline__icon timeline__icon--header"
+          >
+            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+        <h2 class="timeline__heading">Skills</h2>
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail timeline__detail--inline">
+          <span class="skill__name">Business Process Improvement -</span>
+          <span class="skill__description">
+            history of successful innovations leading to cost savings.
+          </span>
+        </div>
+
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail timeline__detail--inline">
+          <span class="skill__name">Vendor Management -</span>
+          <span class="skill__description">
+            managing vendors in projects with a budget over $1000'000.
+          </span>
+        </div>
+
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail timeline__detail--inline">
+          <span class="skill__name">Project Scheduling -</span>
+          <span class="skill__description">
+            over 909 of the projects led were finished in due time. Sales
+            Analysis - background in IT Sales with deep understanding of
+            negotiating contracts.
+          </span>
+        </div>
+
+        <!------------------ Software Section --------------------->
+
+        <span class="timeline__date"></span>
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--normal timeline__icon timeline__icon--header"
+          >
+            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <h2 class="timeline__heading">Software</h2>
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail software__detail">
+          <span class="software__title"
+            >Microsoft Project, MS Windows Server, Linux/Unix</span
+          >
+          <div class="software__expertise">
+            <div class="software__level">
+              <span class="software__circle active"></span>
+              <span class="software__circle active"></span>
+              <span class="software__circle active"></span>
+              <span class="software__circle active"></span>
+              <span class="software__circle active"></span>
+            </div>
+            <span class="software__level-name">Excellent</span>
+          </div>
+        </div>
+
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail software__detail">
+          <span class="software__title">MS Windows Server</span>
+          <div class="software__expertise">
+            <div class="software__level">
+              <span class="software__circle active"></span>
+              <span class="software__circle active"></span>
+              <span class="software__circle active"></span>
+              <span class="software__circle active"></span>
+              <span class="software__circle"></span>
+            </div>
+            <span class="software__level-name">Very Good</span>
+          </div>
+        </div>
+
+        <!---------------- Certifications Section -------------------->
+
+        <span class="timeline__date"></span>
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--normal timeline__icon timeline__icon--header"
+          >
+            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+        <h2 class="timeline__heading">Certifications</h2>
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail timeline__detail--inline">
+          <p>PMP - Project Management Institute</p>
+        </div>
+
+        <span class="timeline__date last"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+        </div>
+
+        <div class="timeline__detail timeline__detail--inline">
+          <p>PRINCE2® Foundation</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
