--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="section--info">
         <aside class="navbar"></aside>
         <section class="personal-info">
-          <h1 class="name">John Smith</h1>
+          <h1 class="name">David Karenzi</h1>
           <p class="career">IT Project Manager</p>
           <div class="socials">
             <div class="social">
@@ -144,7 +144,7 @@
           <span
             class="icon__container icon__container--normal timeline__icon timeline__icon--header"
           >
-            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+            <i class="fa-solid fa-graduation-cap icon icon--normal"></i>
           </span>
 
           <span class="timeline__line"></span>
@@ -183,7 +183,9 @@
           <span
             class="icon__container icon__container--normal timeline__icon timeline__icon--header"
           >
-            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+            <i
+              class="fa-solid fa-puzzle-piece icon icon--normal icon--puzzle-piece"
+            ></i>
           </span>
           <div class="timeline__line"></div>
         </div>
@@ -248,7 +250,7 @@
           <span
             class="icon__container icon__container--normal timeline__icon timeline__icon--header"
           >
-            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+            <i class="fa-solid fa-tv icon icon--normal icon--tv"></i>
           </span>
           <div class="timeline__line"></div>
         </div>
@@ -311,7 +313,7 @@
           <span
             class="icon__container icon__container--normal timeline__icon timeline__icon--header"
           >
-            <i class="fa-solid fa-briefcase icon icon--normal"></i>
+            <i class="fa-solid fa-award icon icon--normal"></i>
           </span>
           <div class="timeline__line"></div>
         </div>
