--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </ul>
         </div>
 
-        <span class="timeline__date">2006-12 - present</span>
+        <span class="timeline__date">2004-09 - 2006-11</span>
 
         <div class="timeline__middle">
           <span
@@ -152,7 +152,7 @@
 
         <h2 class="timeline__heading">Education</h2>
 
-        <span class="timeline__date">2006-12 - present</span>
+        <span class="timeline__date">1996-09 - 2001-05</span>
 
         <div class="timeline__middle">
           <span
@@ -318,7 +318,7 @@
           <div class="timeline__line"></div>
         </div>
         <h2 class="timeline__heading">Certifications</h2>
-        <span class="timeline__date"></span>
+        <span class="timeline__date">2015-05</span>
 
         <div class="timeline__middle">
           <span
@@ -332,7 +332,7 @@
           <p>PMP - Project Management Institute</p>
         </div>
 
-        <span class="timeline__date last"></span>
+        <span class="timeline__date last">2014.04</span>
 
         <div class="timeline__middle">
           <span
