--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ></script>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>CV</title>
   </head>
   <body>
     <main>
