--- a/index.html
+++ b/index.html
@@ -345,6 +345,11 @@
           <p>PRINCE2® Foundation</p>
         </div>
       </section>
+
+      <footer class="footer">
+        <div class="footer__left"></div>
+        <div class="footer__right"></div>
+      </footer>
     </main>
   </body>
 </html>
