--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
         </div>
 
         <div class="timeline__detail timeline__detail--inline">
-          <span class="skill__name">Business Process Improvement -</span>
+          <span class="skill__name">Business Process Improvement </span>
+          <span class="bar">- </span>
           <span class="skill__description">
             history of successful innovations leading to cost savings.
           </span>
@@ -218,7 +219,8 @@
         </div>
 
         <div class="timeline__detail timeline__detail--inline">
-          <span class="skill__name">Vendor Management -</span>
+          <span class="skill__name">Vendor Management</span>
+          <span class="bar">- </span>
           <span class="skill__description">
             managing vendors in projects with a budget over $1000'000.
           </span>
@@ -235,7 +237,8 @@
         </div>
 
         <div class="timeline__detail timeline__detail--inline">
-          <span class="skill__name">Project Scheduling -</span>
+          <span class="skill__name">Project Scheduling</span>
+          <span class="bar">- </span>
           <span class="skill__description">
             over 909 of the projects led were finished in due time. Sales
             Analysis - background in IT Sales with deep understanding of
