--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="section--info">
         <aside class="navbar"></aside>
         <section class="personal-info">
-          <h1 class="name">David Karenzi</h1>
+          <h1 class="name" id="name">David Karenzi</h1>
           <p class="career">IT Project Manager</p>
           <div class="socials">
             <div class="social">
@@ -354,5 +354,7 @@
         <div class="footer__right"></div>
       </footer>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
