--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       src="https://kit.fontawesome.com/b3bb6c61f0.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>CV</title>
@@ -240,9 +246,26 @@
           <span class="skill__name">Project Scheduling</span>
           <span class="bar">- </span>
           <span class="skill__description">
-            over 909 of the projects led were finished in due time. Sales
-            Analysis - background in IT Sales with deep understanding of
-            negotiating contracts.
+            over 909 of the projects led were finished in due time.
+          </span>
+        </div>
+
+        <span class="timeline__date"></span>
+
+        <div class="timeline__middle">
+          <span
+            class="icon__container icon__container--timeline timeline__icon"
+          >
+          </span>
+          <div class="timeline__line"></div>
+        </div>
+
+        <div class="timeline__detail timeline__detail--inline">
+          <span class="skill__name">Sales Analysis</span>
+          <span class="bar">- </span>
+          <span class="skill__description">
+            background in IT Sales with deep understanding of negotiating
+            contracts.
           </span>
         </div>
 
